--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :feed_url %><br>
     <%= f.text_field :feed_url %>
   </div>
+  <div class="field">
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
