--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,9 +3,9 @@
 		<% Feed.all.each do |feed| %>
 			<div class="col-6 col-sm-6 col-lg-4">
 			<h2><%= feed.title %></h2>
-			<p>
+			<p class="box-color">
 	 		<% for entry in FeedEntry.where(:base_url => feed.feed_url) %>
-	   		<%= link_to h(entry.name), entry.url %><br/>
+	   		<%= link_to h(truncate(entry.name)), entry.url, :title => entry.name %><br/>
 	  	<% end %>
 	  	</p>
 	  	</div>
