--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
             <span class="icon-bar"></span>
           </button>
           <%= link_to 'Grumpy News', root_path, :class => 'navbar-brand' %>
+          <%= link_to 'Sign Out', logout_path %>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
